[gd_scene load_steps=3 format=3 uid="uid://c28nlagjcal2t"]

[ext_resource type="Script" uid="uid://c1le5mwg3pbw0" path="res://Inventory/gear_slot.gd" id="1_8v16m"]
[ext_resource type="PackedScene" uid="uid://g3mls7ib10qq" path="res://Scenes/gear_description_popup.tscn" id="2_8v16m"]

[node name="ArmourSlot" type="Panel"]
custom_minimum_size = Vector2(200, 200)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8v16m")

[node name="GearTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GearDescriptionPopup" parent="." instance=ExtResource("2_8v16m")]
layout_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
